--- a/Tracker/wwwroot/index.html
+++ b/Tracker/wwwroot/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Task Tracker</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/site.css"/>
 </head>
 <body>
+<i class="bi bi-align-top" id="f_i"></i>
 <h1>Task Tracker</h1>
 <input id="taskInput" type="text" placeholder="Введите задачу" />
 <button onclick="addTask()">Добавить</button>
