Полное готовое веб-приложение

--- a/Tracker/wwwroot/index.html
+++ b/Tracker/wwwroot/index.html
@@ -8,7 +8,9 @@
     </head>
     <body>
         <i class="bi bi-align-top" id="f_i"></i>
-        <h1>Task Tracker</h1>
+        <div id="title_h1">
+            <h1>Task Tracker</h1>
+        </div>
         <div class="container">
             <input id="taskInput" type="text" placeholder="Введите задачу" />
             <button id="add" onclick="addTask()">Добавить</button>
